--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@
 		</div>
         <div class="rightCol" align="left">
         <!-- main navigation -->
-			<div class="search"><form><input type="text" /></form></div>
+			<!-- <div class="search"><form><input type="text" /></form></div> -->
 	        <img src="resources/images/template/logoText.png" alt="the Aurora Project" border="0" />
 		</div>
         <div style="clear:both"></div>
