--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -104,8 +104,8 @@
             </div>
     
             <div class="rightColThreeColRight">
-            	<br /><h3>Landscape Transformation</h3>
-				<a href=""><img border="0" class="imgBorder" src="resources/images/template/front5.jpg" alt="" /></a>
+            	<br /><h3>Politics and Railroad Expansion</h3>
+				<a href=""><img border="0" class="imgBorder" src="resources/images/template/front6.jpg" alt="" /></a>
             </div>
     
             <div class="rightColThreeColMid">
@@ -139,8 +139,8 @@
 	            <ul>
 	        		<li><a href="./web/railroads.xhtml">Railroad Network Connectivity</a></li>
 	        		<li><a href="./web/dailydispatch.xhtml">The Civil War and Mobility</a></li>
-	        		<li><a href="">Railroad Employment Mobility</a></li>
-	        		<li><a href="">Landscape Transformation</a></li>
+	        		<li><a href="./web/population.xhtml">Slavery and the Expansion of the Railroad</a></li>
+	        		<li><a href="">The Politics of Railroad Expansion</a></li>
 	        		<li><a href="./web/freedman.xhtml">African American Mobility after Emancipation</a></li>
 				</ul></li>
 	 		</ul>   
