Added initial case studies

--- a/src/main/webapp/freedman.xhtml
+++ b/src/main/webapp/freedman.xhtml
@@ -45,7 +45,7 @@
 	<ui:define name="appNav">
 		<a href="" class="selectednav">African American Mobility After
 			Emancipation</a>
-		<a href="">Scholarly Interpretation</a>
+		<a href="./freedman_scholar.xhtml">Scholarly Interpretation</a>
 		<a href="">Developer Resources</a>
 		<a href="">About the Data</a>
 	</ui:define>
