--- a/src/main/webapp/population.xhtml
+++ b/src/main/webapp/population.xhtml
@@ -84,7 +84,7 @@
 	</ui:define>
 
 	<ui:define name="appNav">
-		<a href="" class="selectednav">Slavery and the Growth of the Railroad</a><a href="">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
+		<a href="" class="selectednav">Slavery and the Growth of the Railroad</a><a href="./population_scholar.xhtml">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
 	</ui:define>
 
 	<ui:define name="pageMap">
