--- a/src/main/webapp/dailydispatch.xhtml
+++ b/src/main/webapp/dailydispatch.xhtml
@@ -16,7 +16,7 @@
 			src="http://maps.google.com/maps/api/js?sensor=false"></script>
 		<script type="text/javascript" src="../resources/js/highcharts/highcharts.js"></script>
 		<script type="text/javascript" src="../resources/js/highcharts/exporting.js"></script>
-	
+		<script type="text/javascript" src="../resources/js/polymaps.min.js"></script>
 
 		<script type="text/javascript" src="../resources/js/common.js"></script>
 		<script type="text/javascript" src="../resources/js/dailydispatch.js"></script>
@@ -25,18 +25,26 @@
 
 	<ui:define name="pageMap">
 			<div class="mapBorder" style="width: 1000px; height: 430px;" id="map"></div>
-			<div id="slider"></div>
-			<br/><span style="font-size: 8pt;" id="dateText"></span>
+
+		<div class="timeline" align="center" style="margin-top: 20px;">
+			<div id="cursor">
+				<img src="resources/images/cursor.png" alt="cursor" />
+			</div>
+			<img src="resources/images/timeline.png" alt="timeline" />
+			<div id="number"></div>
+		<span style="font-size: 8pt;" id="dateText"></span>		
+		</div>
+
 	</ui:define>
 	
 	<ui:define name="appNav">
-		<a href="" class="selectednav">The Civil War and Mobility</a><a href="">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
+		<a href="" class="selectednav">The Civil War and Mobility</a><a href="dailydispatch_scholar.xhtml">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
 	</ui:define>
 	
 	<ui:define name="pageContent">
 			<f:view contentType="text/html">
 			
-				<div id="chart"></div>	
+				<div id="chart" style="margin-top: 50px;"></div>	
 				<div id="text">
 					
 				</div>
@@ -44,7 +52,7 @@
 	</ui:define>
 
 	<ui:define name="ribbon">
-		<div style="position: relative; top: -30px;">
+		<div>
 		<div id="datepicker"></div>	
 		Show places referenced days from the selected map date
 		<br/><br/><input size="5" type="text" id="daySpan" value="0"/><br/><br/>
