--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -115,7 +115,7 @@
     
             <div class="rightColThreeColRight">
             	<br /><h3>Railroad Network Connectivity</h3>
-				<a href="./web/railroads.xhtml"><img border="0" class="imgBorder" src="resources/images/template/front2.jpg" alt="" /></a>
+				<a href=""><img border="0" class="imgBorder" src="resources/images/template/front2.jpg" alt="" /></a>
             </div>
     
 		</div>        
@@ -137,7 +137,7 @@
 				</ul></li>
 	        	<li>The apps
 	            <ul>
-	        		<li><a href="./web/railroads.xhtml">Railroad Network Connectivity</a></li>
+	        		<li><a href="">Railroad Network Connectivity</a></li>
 	        		<li><a href="./web/dailydispatch.xhtml">The Civil War and Mobility</a></li>
 	        		<li><a href="./web/population.xhtml">Slavery and the Expansion of the Railroad</a></li>
 	        		<li><a href="">The Politics of Railroad Expansion</a></li>
