--- a/src/main/webapp/population_scholar.xhtml
+++ b/src/main/webapp/population_scholar.xhtml
@@ -37,7 +37,7 @@
         </ui:define>
 
         <ui:define name="ribbon">
-			<h3>Related Case Study</h3>
+			<h3>Related Case Studies</h3>
 			<div>
 			<h5><a href="http://railroads.unl.edu/views/item/slavery_rr">William G. Thomas, "The Growth of Slavery and Southern Railroad Development</a></h5>
 			When we look closely at the South's railroad network, the South's experimentation with and investment in railroads and other technologies, it turns out, was consistent with the rest of the nation. In both regions railroads grew fastest in the new western border regions. And in both railroad development had leapfrogged over the mountain regions, leaving big gaps in some areas, such as Pennsylvania, middle Georgia, and western Virginia.
