--- a/src/main/webapp/railroads.xhtml
+++ b/src/main/webapp/railroads.xhtml
@@ -1,89 +1,98 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core">
 
-<ui:composition template="./resources/templates/app.xhtml">
+    <ui:composition template="./resources/templates/app.xhtml">
 
-	<ui:define name="styles">
-		<link rel="stylesheet" type="text/css"
-			href="../resources/styles/dailydispatch.css" />
-			
-		<style>			
-			#unlRail path {
-				fill: none;
-    			stroke-opacity: .75;
-  				stroke-width: 1px;				
-  				shape-rendering: crispEdges;
-			}
-			
-			.Test .redColor {
-  				stroke: rgb(242, 22, 22);
-			}
+        <ui:define name="styles">
+            <link rel="stylesheet" type="text/css"
+                  href="../resources/styles/dailydispatch.css" />
+            <style>			
+                #unlRail path {
+                    fill: none;
+                }
 
-			.Test2 .redColor {
-  				stroke: rgb(22, 242, 200);
-			}
-												
-			#ukRail path {
-				fill: none;
-  				stroke: rgb(105, 54, 168);
-  				stroke-opacity: .75;
-  				stroke-width: 1px;
-  				shape-rendering: crispEdges;
-			}
-			
-			
-			#states path {
-				fill: none;
-  				stroke: #000;
-  				stroke-opacity: .40;
-  				shape-rendering: crispEdges;
-  				stroke-width: 1.25px;
-			}
-			
-			#counties path {
-				fill: none;
-  				stroke: #000;
-  				stroke-opacity: .40;
-  				shape-rendering: crispEdges;
-  				stroke-width: 0.75px;
-			}
-			
-		</style>
-			
-	</ui:define>
 
-	<ui:define name="scripts">
-		<script type="text/javascript" src="../resources/js/polymaps.min.js"></script>
-		<script type="text/javascript" src="../resources/js/common.js"></script>
-		<script type="text/javascript" src="../resources/js/railroads.js"></script>
-	</ui:define>
+                #ukRail path {
+                    fill: none;
+                }
 
-	<ui:define name="appNav">
-		<a href="" class="selectednav">Railroad Network Connectivity</a><a href="">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
-	</ui:define>
 
-	<ui:define name="pageMap">
-			<div class="mapBorder" style="width: 1000px; height: 430px;" id="map"></div>
-			<div id="slider"></div>
-			<br/><span style="font-size: 8pt;" id="dateText">1845</span>			
-	</ui:define>
-	
-	<ui:define name="pageContent">
-			<f:view contentType="text/html">
-				<img id="waitInidcator" style="display: none;" src="../resources/images/wait.gif"/>
-				<input type="button" onclick="change()" value="Color shift"/>
-			</f:view>
-	</ui:define>
+                #states path {
+                    fill: none;
+                    stroke: #000;
+                    stroke-opacity: .40;
+                    shape-rendering: crispEdges;
+                    stroke-width: 1.25px;
+                }
 
-	<ui:define name="ribbon">
-		Show network data from the following sources
-		<p><input onchange="changeNetwork()" type="checkbox" checked="checked" id="unlRail"/>&nbsp;University of Nebraska</p>
-		<p><input onchange="changeNetwork()" type="checkbox" checked="checked" id="ukRail"/>&nbsp;University of Portsmouth</p>
-	</ui:define>
+                #counties path {
+                    fill: none;
+                    stroke: #000;
+                    stroke-opacity: .40;
+                    shape-rendering: crispEdges;
+                    stroke-width: 0.75px;
+                }
 
-</ui:composition>
+            </style>
+
+        </ui:define>
+
+        <ui:define name="scripts">
+            <script type="text/javascript" src="../resources/js/polymaps.min.js"></script>
+            <script type="text/javascript" src="../resources/js/common.js"></script>
+            <script type="text/javascript" src="../resources/js/railroads.js"></script>
+        </ui:define>
+
+        <ui:define name="appNav">
+            <a href="" class="selectednav">Railroad Network Connectivity</a><a href="./railroads_scholar.xhtml">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
+        </ui:define>
+
+        <ui:define name="pageMap">
+            <div class="mapBorder" style="width: 1000px; height: 430px; margin-bottom: 10px;" id="map"></div>
+            <div class="timeline" align="center">
+                <div id="cursor">
+                    <img src="resources/images/cursor.png" alt="cursor" />
+                </div>
+                <img src="resources/images/timeline.png" alt="timeline" />
+                <div id="number"></div>
+                <span style="font-size: 8pt;" id="dateText">1840</span>		
+            </div>
+
+        </ui:define>
+
+        <ui:define name="pageContent">
+            <f:view contentType="text/html">
+                <div style="margin-top: 40px;">
+                    <h2>The Railroad Network in <span id="displayYear">1845</span></h2>  
+                    The following railroads are currently visible on the map. 
+                    Selecting the name of a railroad will highlight it in the 
+                    color indicated to the left.
+                    <div style="margin-top: 20px" id="owners"></div>
+                </div>
+            </f:view>
+        </ui:define>
+
+        <ui:define name="ribbon">
+            Adjust the visible network scale<br/>
+            <select onchange="changeNetwork()" id="scale">
+                <option value="regional">Regional Rail Network</option>
+                <option value="national" selected="selected">National Rail Network</option>
+            </select>
+            <div style="margin-top: 20px;">
+            Select a railroad highlight color<br/>
+                <select id="highlightColor">
+                    <option value="#0fdb16">Green</option>
+                    <option value="#0872cf">Blue</option>
+                    <option value="#b32626">Red</option>
+                    <option value="#b35719">Orange</option>
+                    <option value="#d6d637">Yellow</option>
+                </select>
+            </div>
+        </ui:define>
+
+    </ui:composition>
 
 </html>
