--- a/src/main/webapp/dailydispatch_scholar.xhtml
+++ b/src/main/webapp/dailydispatch_scholar.xhtml
@@ -7,7 +7,7 @@
     <ui:composition template="./resources/templates/text.xhtml">
 
         <ui:define name="appNav">
-            <a href="./dailydispatch.xhtml">Slavery and the Growth of the Railroad</a><a href="" class="selectednav">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
+            <a href="./dailydispatch.xhtml">The Civil War and Mobility</a><a href="" class="selectednav">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
         </ui:define>
 
 
