Updated data pages to include descriptions and citations

--- a/src/main/webapp/dailydispatch.xhtml
+++ b/src/main/webapp/dailydispatch.xhtml
@@ -38,7 +38,7 @@
 	</ui:define>
 	
 	<ui:define name="appNav">
-		<a href="" class="selectednav">The Civil War and Mobility</a><a href="dailydispatch_scholar.xhtml">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
+		<a href="" class="selectednav">The Civil War and Mobility</a><a href="dailydispatch_scholar.xhtml">Scholarly Interpretation</a><a href="./dailydispatch_data.xhtml">About the Data</a>
 	</ui:define>
 	
 	<ui:define name="pageContent">
