--- a/src/main/webapp/freedman.xhtml
+++ b/src/main/webapp/freedman.xhtml
@@ -54,8 +54,7 @@
             <a href="" class="selectednav">African American Mobility After
                 Emancipation</a>
             <a href="./freedman_scholar.xhtml">Scholarly Interpretation</a>
-            <a href="">Developer Resources</a>
-            <a href="">About the Data</a>
+            <a href="./freedman_data.xhtml">About the Data</a>
         </ui:define>
 
         <ui:define name="pageMap">
