--- a/src/main/webapp/railroads_scholar.xhtml
+++ b/src/main/webapp/railroads_scholar.xhtml
@@ -7,7 +7,7 @@
     <ui:composition template="./resources/templates/text.xhtml">
 
         <ui:define name="appNav">
-            <a href="./railroads.xhtml">Railroad Network Connectivity</a><a href="" class="selectednav">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
+            <a href="./railroads.xhtml">Railroad Network Connectivity</a><a href="" class="selectednav">Scholarly Interpretation</a><a href="./railroads_data.xhtml">About the Data</a>
         </ui:define>
 
 
