--- a/src/main/webapp/freedman_scholar.xhtml
+++ b/src/main/webapp/freedman_scholar.xhtml
@@ -7,7 +7,7 @@
     <ui:composition template="./resources/templates/text.xhtml">
 
         <ui:define name="appNav">
-            <a href="./freedman.xhtml">African American Mobility After Emancipation</a><a href="" class="selectednav">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
+            <a href="./freedman.xhtml">African American Mobility After Emancipation</a><a href="" class="selectednav">Scholarly Interpretation</a><a href="./freedman_data.xhtml">About the Data</a>
         </ui:define>
 
 
