--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,38 +42,27 @@
                         <li><a href="">Visualizations</a></li>
                         <li><a href="">Data sets</a></li>
                         <li><a href="">Developer Resources</a></li>
-                    </ul>
+                    </ul> -->
                     <h3>Participate</h3>
                     <ul>
-                        <li><a href="">Choose a scholarly community</a></li>
-                        <li><a href="">Create a visualization</a></li>
-                        <li><a href="">Upload a data set</a></li>
-                        <li><a href="">Classes</a></li>
-                        <li><a href="">Register</a></li>
+                        <li><a href="https://github.com/icotting/The-Aurora-Project">Contribute Code</a></li>
+                        <li><a href="http://historyharvest.unl.edu">Share Your History</a></li></ul>
                     </ul>
-                    <h3>Learn more</h3>
+
+                    <h3>The Data</h3>
                     <ul>
-                        <li><a href="">Quick start</a></li>
-                        <li><a href="">Visualization types</a></li>
-                        <li><a href="">Data format and style</a></li>
-                        <li><a href="">About Aurora</a></li>
-                        <li><a href="">FAQ</a></li>
-                        <li><a href="">Blog</a></li>
+                        <li><a href="./web/data/census.xhtml">Census Dataset</a></li>
+                        <li><a href="./web/data/rail.xhtml">Railroad GIS Dataset</a></li>
+                        <li><a href="./web/data/places.xhtml">Richmond Daily Dispatch Places Dataset</a></li>
+                        <li><a href="./web/data/freedmen.xhtml">Freedmen's Bureau Labor Statistics Dataset</a></li>
                     </ul>
 
                     <h3>Contact Us</h3>
                     <ul>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Report a bug</a></li>
+                        <li><a href="http://history.unl.edu/digital-history">Digital History @ UNL</a></li>
+                        <li><a href="http://unlcms.unl.edu/history/department-of-history/william-g-thomas-iii">Will Thomas</a></li></ul>
                     </ul>
 
-                    <h3>Legal</h3>
-                    <ul>
-                        <li><a href="">Terms of use</a></li>
-                        <li><a href="">Privacy</a></li>
-                        <li><a href="">Provide feedback</a></li>
-                    </ul>
-                    -->
 
                 </div>
 
