--- a/src/main/webapp/railroads.xhtml
+++ b/src/main/webapp/railroads.xhtml
@@ -47,7 +47,7 @@
         </ui:define>
 
         <ui:define name="appNav">
-            <a href="" class="selectednav">Railroad Network Connectivity</a><a href="./railroads_scholar.xhtml">Scholarly Interpretation</a><a href="">Developer Resources</a><a href="">About the Data</a>
+            <a href="" class="selectednav">Railroad Network Connectivity</a><a href="./railroads_scholar.xhtml">Scholarly Interpretation</a><a href="./railroads_data.xhtml">About the Data</a>
         </ui:define>
 
         <ui:define name="pageMap">
